--- a/ray_tracer.ipynb
+++ b/ray_tracer.ipynb
@@ -8,36 +8,42 @@
    "outputs": [],
    "source": [
     "import torch as t\n",
-    "import numpy as np"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "f5ccc273",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "import numpy as np\n",
     "import matplotlib.pyplot as plt"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "id": "5aeed3a3-b336-4196-8118-eb3c540ff7d2",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[ 1.0000, -0.3000, -0.3000],\n",
+      "        [ 1.0000, -0.2793, -0.3000],\n",
+      "        [ 1.0000, -0.2586, -0.3000],\n",
+      "        ...,\n",
+      "        [ 1.0000,  0.2586,  0.3000],\n",
+      "        [ 1.0000,  0.2793,  0.3000],\n",
+      "        [ 1.0000,  0.3000,  0.3000]])\n"
+     ]
+    }
+   ],
    "source": [
     "H = W = 30\n",
-    "B = H * W\n",
+    "B=H*W\n",
     "\n",
-    "ray_origins = t.tensor([-5., 0, 0]).reshape([1, 3]).expand([B, 3])\n",
+    "ray_origins = t.tensor([-5.0, 0, 0]).reshape([1, 3]).expand([B, 3])\n",
     "\n",
     "x_dirs = t.linspace(-0.3, 0.3, W).unsqueeze(0).expand([H, W]).reshape([-1])\n",
     "y_dirs = t.linspace(-0.3, 0.3, H).unsqueeze(1).expand([H, W]).reshape([-1])\n",
     "\n",
     "# todo: we should normalize these\n",
-    "ray_directions = t.stack([t.ones(B), x_dirs, y_dirs], dim=1)"
+    "ray_directions = t.stack([t.ones(B), x_dirs, y_dirs], dim=1)\n",
+    "print(ray_directions)\n"
    ]
   },
   {
@@ -53,13 +59,21 @@
    "execution_count": 4,
    "id": "79c44bb1-8a98-4cc3-9f7c-f5a3fa51cc56",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([900, 3, 3])\n"
+     ]
+    }
+   ],
    "source": [
-    "vertices = t.tensor([[[3., 0, 0], [3, 0, 1], [3, 1, 1]]]).expand([B, 3, 3])\n",
+    "vertices = t.tensor([[[3.0, 0, 0], [3, 0, 1], [3, 1, 1]]]).expand([B, 3, 3])\n",
     "\n",
-    "vertex_0 = vertices[:,0]\n",
-    "vertex_1 = vertices[:,1]\n",
-    "vertex_2 = vertices[:,2]\n",
+    "vertex_0 = vertices[:, 0]\n",
+    "vertex_1 = vertices[:, 1]\n",
+    "vertex_2 = vertices[:, 2]\n",
     "\n",
     "edge_1 = vertex_1 - vertex_0\n",
     "\n",
@@ -67,21 +81,21 @@
     "\n",
     "h = ray_directions.cross(edge_2, dim=1)\n",
     "\n",
-    "a = t.einsum('bx,bx->b', edge_1, h)\n",
+    "a = t.einsum(\"bx,bx->b\", edge_1, h)\n",
     "\n",
     "EPSILON = 1e-7\n",
     "\n",
     "mask = (a > -EPSILON) & (a < EPSILON)\n",
     "\n",
-    "f = 1. / a\n",
+    "f = 1.0 / a\n",
     "s = ray_origins - vertex_0\n",
-    "u = f * t.einsum('bx,bx->b', s, h)\n",
+    "u = f * t.einsum(\"bx,bx->b\", s, h)\n",
     "\n",
     "mask2 = (u < 0) | (u > 1)\n",
     "\n",
     "q = s.cross(edge_1, dim=1)\n",
-    "v = f * t.einsum('bx,bx->b', ray_directions, q)\n",
-    "mask3 = (v < 0) | (u + v > 1)"
+    "v = f * t.einsum(\"bx,bx->b\", ray_directions, q)\n",
+    "mask3 = (v < 0) | (u + v > 1)\n"
    ]
   },
   {
@@ -114,17 +128,8 @@
     }
    ],
    "source": [
-    "\n",
-    "plt.imshow((mask | mask2 | mask3).reshape([H, W]))"
+    "plt.imshow((mask | mask2 | mask3).reshape([H, W]))\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5d9a93c9",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -141,7 +146,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from stl import mesh"
+    "from stl import mesh\n"
    ]
   },
   {
@@ -162,7 +167,7 @@
     }
    ],
    "source": [
-    "mesh.Mesh.from_file('pikachu_1gen_flowalistik.STL').vectors.shape"
+    "mesh.Mesh.from_file(\"pikachu_1gen_flowalistik.STL\").vectors.shape\n"
    ]
   },
   {
@@ -173,10 +178,10 @@
    "outputs": [],
    "source": [
     "# https://www.thingiverse.com/thing:376601\n",
-    "model = mesh.Mesh.from_file('pikachu_1gen_flowalistik.STL') \n",
+    "model = mesh.Mesh.from_file(\"pikachu_1gen_flowalistik.STL\")\n",
     "model.translate(np.array([0, 0, -30]))\n",
     "# model = mesh.Mesh.from_file('utahteapot.stl')\n",
-    "# teapot.translate(np.array([20, 0, -4]))"
+    "# teapot.translate(np.array([20, 0, -4]))\n"
    ]
   },
   {
@@ -186,7 +191,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "vertices = t.tensor(model.vectors.copy())"
+    "vertices = t.tensor(model.vectors.copy())\n"
    ]
   },
   {
@@ -196,9 +201,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "vertex_0 = vertices[:,0].unsqueeze(0)\n",
-    "vertex_1 = vertices[:,1].unsqueeze(0)\n",
-    "vertex_2 = vertices[:,2].unsqueeze(0)"
+    "vertex_0 = vertices[:, 0].unsqueeze(0)\n",
+    "vertex_1 = vertices[:, 1].unsqueeze(0)\n",
+    "vertex_2 = vertices[:, 2].unsqueeze(0)\n"
    ]
   },
   {
@@ -211,13 +216,13 @@
     "H = W = 300\n",
     "B = H * W\n",
     "\n",
-    "ray_origins = t.tensor([-150., -50, 50]).reshape([1, 3]).expand([B, 3])\n",
+    "ray_origins = t.tensor([-150.0, -50, 50]).reshape([1, 3]).expand([B, 3])\n",
     "\n",
     "x_dirs = t.linspace(0.15, 0.65, W).unsqueeze(0).expand([H, W]).reshape([-1])\n",
     "\n",
     "y_dirs = t.linspace(-0.6, -0.1, H).unsqueeze(1).expand([H, W]).reshape([-1])\n",
     "\n",
-    "ray_directions = t.stack([t.ones(B), x_dirs, y_dirs], dim=1)"
+    "ray_directions = t.stack([t.ones(B), x_dirs, y_dirs], dim=1)\n"
    ]
   },
   {
@@ -227,7 +232,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "num_vertices = vertices.shape[0]"
+    "num_vertices = vertices.shape[0]\n"
    ]
   },
   {
@@ -287,7 +292,7 @@
     }
    ],
    "source": [
-    "mask2.shape"
+    "mask2.shape\n"
    ]
   },
   {
@@ -321,7 +326,7 @@
    ],
    "source": [
     "pixel_mask = (mask2 | mask3).all(dim=1)\n",
-    "plt.imshow(pixel_mask.reshape([H, W]), origin='lower')"
+    "plt.imshow(pixel_mask.reshape([H, W]), origin=\"lower\")\n"
    ]
   },
   {
@@ -332,7 +337,7 @@
    "outputs": [],
    "source": [
     "# this variable is called `t` in the wikipedia C++ code\n",
-    "t_ = f * t.einsum('zvd,pvd->pv', edge_2, q)"
+    "t_ = f * t.einsum(\"zvd,pvd->pv\", edge_2, q)\n"
    ]
   },
   {
@@ -353,7 +358,7 @@
     }
    ],
    "source": [
-    "t_.shape"
+    "t_.shape\n"
    ]
   },
   {
@@ -387,8 +392,8 @@
    ],
    "source": [
     "# this shows how many triangles every ray hits\n",
-    "plt.imshow((~mask2 & ~mask3).sum(dim=1).reshape([H, W]), origin='lower')\n",
-    "plt.colorbar()"
+    "plt.imshow((~mask2 & ~mask3).sum(dim=1).reshape([H, W]), origin=\"lower\")\n",
+    "plt.colorbar()\n"
    ]
   },
   {
@@ -398,7 +403,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "intersection_points = t.einsum('pv,pd->pvd', t_, ray_directions) + ray_origins.unsqueeze(1)"
+    "intersection_points = t.einsum(\n",
+    "    \"pv,pd->pvd\", t_, ray_directions\n",
+    ") + ray_origins.unsqueeze(1)\n"
    ]
   },
   {
@@ -419,7 +426,7 @@
     }
    ],
    "source": [
-    "intersection_points.shape"
+    "intersection_points.shape\n"
    ]
   },
   {
@@ -429,7 +436,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pixel_vertex_mask = mask2 | mask3"
+    "pixel_vertex_mask = mask2 | mask3\n"
    ]
   },
   {
@@ -450,7 +457,7 @@
     }
    ],
    "source": [
-    "pixel_vertex_mask.shape"
+    "pixel_vertex_mask.shape\n"
    ]
   },
   {
@@ -460,7 +467,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np"
+    "import numpy as np\n"
    ]
   },
   {
@@ -470,7 +477,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "t_[pixel_vertex_mask] = float('inf')"
+    "t_[pixel_vertex_mask] = float(\"inf\")\n"
    ]
   },
   {
@@ -480,7 +487,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "selected_triangle_ids = t_.argmin(dim=1)"
+    "selected_triangle_ids = t_.argmin(dim=1)\n"
    ]
   },
   {
@@ -513,7 +520,7 @@
     }
    ],
    "source": [
-    "plt.imshow(selected_triangle_ids.reshape([H, W]), origin='lower', cmap='Reds')"
+    "plt.imshow(selected_triangle_ids.reshape([H, W]), origin=\"lower\", cmap=\"Reds\")\n"
    ]
   },
   {
@@ -546,7 +553,7 @@
     }
    ],
    "source": [
-    "plt.imshow(t_.min(dim=1).values.reshape([H, W]), origin='lower', cmap='Reds')"
+    "plt.imshow(t_.min(dim=1).values.reshape([H, W]), origin=\"lower\", cmap=\"Reds\")\n"
    ]
   },
   {
@@ -556,7 +563,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "selected_t = t.gather(t_, dim=1, index=selected_triangle_ids.unsqueeze(1)).squeeze(1)"
+    "selected_t = t.gather(t_, dim=1, index=selected_triangle_ids.unsqueeze(1)).squeeze(1)\n"
    ]
   },
   {
@@ -566,7 +573,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "triangle_ids_2d = selected_triangle_ids.reshape([H, W])"
+    "triangle_ids_2d = selected_triangle_ids.reshape([H, W])\n"
    ]
   },
   {
@@ -599,8 +606,13 @@
     }
    ],
    "source": [
-    "plt.imshow((triangle_ids_2d[1:, 1:] == triangle_ids_2d[:-1, 1:]) & (triangle_ids_2d[1:,1:] == triangle_ids_2d[1:,:-1]), origin='lower', cmap='Reds',\n",
-    "           interpolation=\"nearest\")"
+    "plt.imshow(\n",
+    "    (triangle_ids_2d[1:, 1:] == triangle_ids_2d[:-1, 1:])\n",
+    "    & (triangle_ids_2d[1:, 1:] == triangle_ids_2d[1:, :-1]),\n",
+    "    origin=\"lower\",\n",
+    "    cmap=\"Reds\",\n",
+    "    interpolation=\"nearest\",\n",
+    ")\n"
    ]
   },
   {
@@ -610,7 +622,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "selected_vertices = t.gather(vertices, 0, selected_triangle_ids.reshape([-1, 1, 1]).expand([-1, 3, 3]))"
+    "selected_vertices = t.gather(\n",
+    "    vertices, 0, selected_triangle_ids.reshape([-1, 1, 1]).expand([-1, 3, 3])\n",
+    ")\n"
    ]
   },
   {
@@ -631,7 +645,7 @@
     }
    ],
    "source": [
-    "selected_vertices.shape"
+    "selected_vertices.shape\n"
    ]
   },
   {
@@ -652,7 +666,7 @@
     }
    ],
    "source": [
-    "model.normals.shape"
+    "model.normals.shape\n"
    ]
   },
   {
@@ -662,8 +676,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "normals = t.tensor(model.normals.copy())"
+    "normals = t.tensor(model.normals.copy())\n"
    ]
   },
   {
@@ -673,8 +686,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "relevant_normals = t.gather(normals, 0, selected_triangle_ids.reshape([-1, 1]).expand([-1, 3]))"
+    "relevant_normals = t.gather(\n",
+    "    normals, 0, selected_triangle_ids.reshape([-1, 1]).expand([-1, 3])\n",
+    ")\n"
    ]
   },
   {
@@ -686,7 +700,7 @@
    "source": [
     "from __future__ import print_function\n",
     "from ipywidgets import interact, interactive, fixed, interact_manual\n",
-    "import ipywidgets as widgets"
+    "import ipywidgets as widgets\n"
    ]
   },
   {
@@ -696,12 +710,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def foo(x=1., y=0., z=0.):\n",
+    "def foo(x=1.0, y=0.0, z=0.0):\n",
     "    total = (x ** 2 + y ** 2 + z ** 2) ** 0.5\n",
     "    vec = t.tensor([x, y, z]) / total\n",
-    "    plt.imshow(((t.max((relevant_normals * vec).sum(dim=1) / relevant_normals.norm(dim=1), t.tensor(0.)) * ~pixel_mask) \n",
-    "               ).reshape([H, W]), origin='lower', cmap='Reds')\n",
-    "    plt.colorbar()"
+    "    plt.imshow(\n",
+    "        (\n",
+    "            (\n",
+    "                t.max(\n",
+    "                    (relevant_normals * vec).sum(dim=1) / relevant_normals.norm(dim=1),\n",
+    "                    t.tensor(0.0),\n",
+    "                )\n",
+    "                * ~pixel_mask\n",
+    "            )\n",
+    "        ).reshape([H, W]),\n",
+    "        origin=\"lower\",\n",
+    "        cmap=\"Reds\",\n",
+    "    )\n",
+    "    plt.colorbar()\n"
    ]
   },
   {
@@ -722,7 +747,7 @@
     }
    ],
    "source": [
-    "relevant_normals.shape"
+    "relevant_normals.shape\n"
    ]
   },
   {
@@ -757,7 +782,7 @@
     }
    ],
    "source": [
-    "interact(foo)"
+    "interact(foo)\n"
    ]
   },
   {
@@ -778,7 +803,7 @@
     }
    ],
    "source": [
-    "1+2"
+    "1 + 2\n"
    ]
   },
   {
@@ -819,9 +844,21 @@
     }
    ],
    "source": [
-    "plt.imshow((((t.max(relevant_normals[:,0]) / relevant_normals.norm(dim=1) + 200 + t_.min(dim=1).values * 20)) * (~mask2 & ~mask3).any(dim=1)\n",
-    "           ).reshape([H, W]), origin='lower', cmap='Reds')\n",
-    "plt.colorbar()"
+    "plt.imshow(\n",
+    "    (\n",
+    "        (\n",
+    "            (\n",
+    "                t.max(relevant_normals[:, 0]) / relevant_normals.norm(dim=1)\n",
+    "                + 200\n",
+    "                + t_.min(dim=1).values * 20\n",
+    "            )\n",
+    "        )\n",
+    "        * (~mask2 & ~mask3).any(dim=1)\n",
+    "    ).reshape([H, W]),\n",
+    "    origin=\"lower\",\n",
+    "    cmap=\"Reds\",\n",
+    ")\n",
+    "plt.colorbar()\n"
    ]
   },
   {
@@ -849,7 +886,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
