--- a/days/w1d2/w1d2_template.ipynb
+++ b/days/w1d2/w1d2_template.ipynb
@@ -801,9 +801,8 @@
       },
       "outputs": [],
       "source": [
-        "def test_conv2d_minimal(my_conv, n_tests=10):\n",
+        "def test_conv2d_minimal(my_conv, n_tests = 10):\n",
         "  import numpy as np\n",
-        "\n",
         "  for i in range(n_tests):\n",
         "    b = np.random.randint(1, 10)\n",
         "    h = np.random.randint(10, 300)\n",
@@ -820,19 +819,18 @@
         "      weights\n",
         "    )\n",
         "\n",
-        "    torch_output = torch.conv1d(\n",
+        "    torch_output = torch.conv2d(\n",
         "      x,\n",
-        "      weights,\n",
-        "      stride=1,\n",
-        "      padding=0\n",
+        "      weights\n",
         "    )\n",
         "\n",
         "    if not torch.allclose(my_output, torch_output, atol=1e-4, rtol=1e-4):\n",
-        "      print(f'Conv2d (minimal) test {i} failed.')\n",
+        "      print(f'Conv2d test {i} failed.')\n",
         "      print(f\"Expected {torch_output.flatten()[:5]}...,\")\n",
-        "      print(f\"Got {my_output.flatten()[:5]}...\")\n",
+        "      print(f\"Got {my_output.flatten()[:5]}...,\")\n",
         "      return\n",
         "    print(f\"Test {i} passed!\")\n",
+        "\n",
         "  print('All tests passed!')\n",
         "\n",
         "test_conv2d_minimal(conv2d_minimal)"
