--- a/days/w1d2/w1d2_sol.ipynb
+++ b/days/w1d2/w1d2_sol.ipynb
@@ -1234,7 +1234,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": 46,
       "metadata": {
         "id": "7YR8D2WG9LSQ"
       },
@@ -1258,9 +1258,8 @@
         }
       ],
       "source": [
-        "def test_conv2d_minimal(my_conv, n_tests=10):\n",
+        "def test_conv2d_minimal(my_conv, n_tests = 10):\n",
         "  import numpy as np\n",
-        "\n",
         "  for i in range(n_tests):\n",
         "    b = np.random.randint(1, 10)\n",
         "    h = np.random.randint(10, 300)\n",
@@ -1277,20 +1276,20 @@
         "      weights\n",
         "    )\n",
         "\n",
-        "    torch_output = torch.conv1d(\n",
+        "    torch_output = torch.conv2d(\n",
         "      x,\n",
-        "      weights,\n",
-        "      stride=1,\n",
-        "      padding=0\n",
+        "      weights\n",
         "    )\n",
         "\n",
         "    if not torch.allclose(my_output, torch_output, atol=1e-4, rtol=1e-4):\n",
-        "      print(f'Conv2d (minimal) test {i} failed.')\n",
+        "      print(f'Conv2d test {i} failed.')\n",
         "      print(f\"Expected {torch_output.flatten()[:5]}...,\")\n",
-        "      print(f\"Got {my_output.flatten()[:5]}...\")\n",
+        "      print(f\"Got {my_output.flatten()[:5]}...,\")\n",
         "      return\n",
         "    print(f\"Test {i} passed!\")\n",
+        "\n",
         "  print('All tests passed!')\n",
+        "\n",
         "\n",
         "test_conv2d_minimal(conv2d_minimal)"
       ]
