--- a/days/w1d3/w1d3_template.ipynb
+++ b/days/w1d3/w1d3_template.ipynb
@@ -7,7 +7,7 @@
    "outputs": [],
    "source": [
     "import torch\n",
-    "from days.w1d3_tests import test_rosenbrock, _opt_rosenbrock, _rosenbrock\n",
+    "from days import w1d3_tests\n",
     "import matplotlib.pyplot as plt"
    ]
   }
