Some more clean up + explain on render ipynb

--- a/days/w1d1_renderer.ipynb
+++ b/days/w1d1_renderer.ipynb
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -133,14 +133,14 @@
     "\n",
     "This has two steps: find the point where the two (infinite euclidean) lines intersect by solving a linear equation, and then check whether that point is inside the line segments.\n",
     "\n",
-    "Our camera line is defined by points $R_1$ and $R_2$, and our object line is defined by points $O_1$ and $O_2$.\n",
+    "Our camera line is defined by points $R_1$ and $R_2$, and our object line is defined by points $L_1$ and $L_2$.\n",
     "\n",
-    "We can write the equations for all points on the camera line as $R(u)=R_1+u(R_2 - R_1)$ and on the object lines as $O(v)=O_1+v(O_2 - O_1)$ for $u, v \\in [0, 1]$."
+    "We can write the equations for all points on the camera line as $R(u)=R_1+u(R_2 - R_1)$ and on the object lines as $O(v)=L_1+v(L_2 - L_1)$ for $u, v \\in [0, 1]$."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 4,
    "metadata": {
     "cellView": "form",
     "colab": {
@@ -167,7 +167,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "af017fb9fea84b118397df77fac9d960",
+       "model_id": "1d7cd354910e4694bb9b24ee62b365af",
        "version_major": 2,
        "version_minor": 0
       },
@@ -199,12 +199,13 @@
    "metadata": {},
    "source": [
     "Setting the line equations from above equal:\n",
+    "\n",
     "\\begin{align}\n",
-    "R_1+u(R_2 - R_1) &= O_1 + v(O_2 - O_1) \\\\\n",
-    "u(R_2 - R_1) - v(O_2 - O_1) &= O_1 - R_1  \\\\\n",
+    "R_1+u(R_2 - R_1) &= L_1 + v(L_2 - L_1) \\\\\n",
+    "u(R_2 - R_1) - v(L_2 - L_1) &= L_1 - R_1  \\\\\n",
     "\\begin{pmatrix}\n",
-    "(R_2 - R_1)_x & (O_1 - O_2)_x \\\\\n",
-    "(R_2 - R_1)_y & (O_1 - O_2)_y \\\\\n",
+    "(R_2 - R_1)_x & (L_1 - L_2)_x \\\\\n",
+    "(R_2 - R_1)_y & (L_1 - L_2)_y \\\\\n",
     "\\end{pmatrix}\n",
     "\\begin{pmatrix}\n",
     "u \\\\\n",
@@ -212,8 +213,8 @@
     "\\end{pmatrix}\n",
     "&= \n",
     "\\begin{pmatrix}\n",
-    "(O_1 - R_1)_x \\\\\n",
-    "(O_1 - R_1)_y \\\\\n",
+    "(L_1 - R_1)_x \\\\\n",
+    "(L_1 - R_1)_y \\\\\n",
     "\\end{pmatrix}\n",
     "\\end{align}\n",
     "\n",
@@ -258,7 +259,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Step:** Using `torch.linalg.solve` and `torch.stack`, write the function\n",
+    "Using `torch.linalg.solve` and `torch.stack`, write the function\n",
     "```\n",
     "intersect_ray_1d(ray, obj) -> bool\n",
     "```\n",
@@ -281,11 +282,11 @@
     "    R_1 = ray[0]\n",
     "    R_2 = ray[1]\n",
     "\n",
-    "    O_1 = obj[0]\n",
-    "    O_2 = obj[1]\n",
+    "    L_1 = obj[0]\n",
+    "    L_2 = obj[1]\n",
     "\n",
-    "    A = t.stack([R_2 - R_1, O_1 - O_2], dim=1)\n",
-    "    B = O_1 - R_1\n",
+    "    A = t.stack([R_2 - R_1, L_1 - L_2], dim=1)\n",
+    "    B = L_1 - R_1\n",
     "\n",
     "    sol = t.linalg.solve(A, B)\n",
     "\n",
@@ -324,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -339,11 +340,11 @@
     "    R_1 = rays[:, :, 0]\n",
     "    R_2 = rays[:, :, 1]\n",
     "\n",
-    "    O_1 = objs[:, :, 0]\n",
-    "    O_2 = objs[:, :, 1]\n",
+    "    L_1 = objs[:, :, 0]\n",
+    "    L_2 = objs[:, :, 1]\n",
     "\n",
-    "    A = t.stack([R_2 - R_1, O_1 - O_2], dim=-1)\n",
-    "    B = O_1 - R_1\n",
+    "    A = t.stack([R_2 - R_1, L_1 - L_2], dim=-1)\n",
+    "    B = L_1 - R_1\n",
     "\n",
     "    sol = t.linalg.solve(A, B)\n",
     "\n",
@@ -373,7 +374,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Now, lets generate a 2d grid of camera lines\n",
+    "### Now, lets generate a 2d grid of camera lines (back to 2d images)\n",
     "\n",
     "Make a function\n",
     "\n",
@@ -429,13 +430,6 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Now"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "metadata": {
     "id": "uQVLO5tiyLvO"
    },
@@ -478,7 +472,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 12,
    "metadata": {
     "cellView": "form",
     "colab": {
@@ -507,7 +501,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c756570711974d559844ed8be29aedc7",
+       "model_id": "bf15ac6efdcc4e25b7c22273325a10ee",
        "version_major": 2,
        "version_minor": 0
       },
@@ -542,7 +536,7 @@
     "id": "FYo4onl50S5h"
    },
    "source": [
-    "### Triangle-line intersection"
+    "### Triangle-ray intersection"
    ]
   },
   {
@@ -551,7 +545,8 @@
     "id": "gcCugBpj-XDl"
    },
    "source": [
-    "Our intersection algorithm will thus consist of two steps:\n",
+    "We'll consider a ray (not a line segment) with origin $O$ and direction $D$.\n",
+    "Our intersection algorithm will  consist of two steps:\n",
     "* Finding the intersection between the line and the plane containing the triangle, by solving the equation $P(s) = P(u, v)$;\n",
     "* Checking if $u$ and $v$ are within the bounds of the triangle."
    ]
@@ -644,7 +639,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 14,
    "metadata": {
     "id": "hogYxNAnC2wc"
    },
@@ -756,9 +751,9 @@
     "id": "7xInR0Zyg-1q"
    },
    "source": [
-    "Step: implement a function `raytrace_triangle(triangle, camera)` that receives a `triangle` (a tensor of size `[3, 3]`) and a `camera` object, and returns a tensor with each entry corresponding to the presence of a triangle on that pixel (1 if there is a triangle, and 0 otherwise). Use a single batch call to `torch.linalg.solve`. Visualize the result with `plt.imshow`.\n",
+    "Implement a function `raytrace_triangle(triangle, camera)` that receives a `triangle` (a tensor of size `[3, 3]`) and a `camera` object, and returns a tensor with each entry corresponding to the presence of a triangle on that pixel (1 if there is a triangle, and 0 otherwise). Use a single batch call to `torch.linalg.solve`. Visualize the result with `plt.imshow`.\n",
     "* Your function is expected to look similar to `triangle_line_intersects`, with some preprocessing and postprocessing around the call to `solve`.\n",
-    "* It is suggested to use `torch.reshape` and `torch.repeat` to process tensor shapes.\n"
+    "* It is suggested to use `einops.reshape` and `einops.repeat` to process tensor shapes.\n"
    ]
   },
   {
@@ -776,7 +771,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7fc8dc6b0c40>"
+       "<matplotlib.image.AxesImage at 0x7f2fe49f1720>"
       ]
      },
      "execution_count": 16,
@@ -897,7 +892,7 @@
    "source": [
     "Step: implement a function `raytrace_mesh(triangles, camera)` that receives the `triangles` of a mesh (a tensor of size `[T, 3, 3]`) and a `camera` object, and returns a tensor with the distance to the mesh at that pixel (let the distance be infinite if there is no intersection); Use a single batch call to `torch.linalg.solve`. Visualize the result with `plt.imshow`.\n",
     "* Your function is expected to look similar to `raytrace_triangle`.\n",
-    "* Target the camera towards the barycenter of the mesh."
+    "* Target the camera towards the barycenter of the mesh (the average position of all triangle vertices)."
    ]
   },
   {
@@ -915,7 +910,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7fc8dc701030>"
+       "<matplotlib.image.AxesImage at 0x7f2fe4059c30>"
       ]
      },
      "execution_count": 20,
@@ -1026,8 +1021,11 @@
     "id": "2jac2UU5hy4s"
    },
    "source": [
+    "Write a function `multirender_mesh(triangles, camera, origins)`, behaving similar to `render_mesh`, with the change that it accepts a parameter `origins`, corresponding to different positions of the camera, and returns the distances to the model for each origin and pixel. Use a single call to `torch.linalg.solve`. Use this function to make a video rotating around the model. You can use [media.show_video](https://google.github.io/mediapy/#mediapy.show_video) to display the video in a notebook. The easiest way to do this is probably to render each frame with matplotlib to an image file, load each image file using `Image`, and then pass all the images to `media.show_video`. \n",
     "\n",
-    "Step: Write a function `multirender_mesh(triangles, camera, origins)`, behaving similar to `render_mesh`, with the change that it accepts a parameter `origins`, corresponding to different positions of the camera, and returns the distances to the model for each origin and pixel. Use a single call to `torch.linalg.solve`. Use this function to make a video rotating around the model."
+    "This might end up taking a while to run. Be careful not to use too much RAM! \n",
+    "\n",
+    "_Optional: run the rendering on the GPU and try to make it faster. Also consider playing around with other meshes._"
    ]
   },
   {
@@ -1041,6 +1039,13 @@
     "outputId": "6ce38b54-8fe6-4415-c11a-a18d2bb71556"
    },
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7.92841362953186\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -1060,66 +1065,72 @@
    "source": [
     "### Reference code, to be removed in handout\n",
     "def multirender_mesh(triangles, camera, origins):\n",
-    "  H = camera.height\n",
-    "  W = camera.width\n",
+    "    H = camera.height\n",
+    "    W = camera.width\n",
     "\n",
-    "  target = mesh_center\n",
+    "    target = mesh_center\n",
     "\n",
-    "  N = H*W\n",
-    "  nO = len(origins)\n",
-    "  T = len(triangles)\n",
+    "    N = H * W\n",
+    "    nO = len(origins)\n",
+    "    T = len(triangles)\n",
     "\n",
-    "  O = t.stack(origins, dim=0) # (n0, 3)\n",
-    "  O = O[:, None, :].repeat(1, N*T, 1).reshape(nO*N*T, 3) # (n0*N, 3)\n",
+    "    O = t.stack(origins, dim=0)  # (n0, 3)\n",
+    "    O = O[:, None, :].repeat(1, N * T, 1).reshape(nO * N * T, 3)  # (n0*N, 3)\n",
     "\n",
-    "  Ds = []\n",
-    "  for origin in origins:\n",
-    "    camera.direction = target - origin\n",
-    "    D = camera.pixel_rays()\n",
-    "    D = D[:, :, None, :].repeat(1, 1, T, 1).reshape(N*T, 3)\n",
-    "    Ds.append(D)\n",
-    "  D = t.stack(Ds, dim=0).reshape(-1, 3) # (nO*H*W*T, 3)\n",
+    "    Ds = []\n",
+    "    for origin in origins:\n",
+    "        camera.direction = target - origin\n",
+    "        D = camera.pixel_rays()\n",
+    "        D = D[:, :, None, :].repeat(1, 1, T, 1).reshape(N * T, 3)\n",
+    "        Ds.append(D)\n",
+    "    D = t.stack(Ds, dim=0).reshape(-1, 3)  # (nO*H*W*T, 3)\n",
     "\n",
-    "  A = triangles[:, 0].repeat(N*nO, 1)\n",
-    "  B = triangles[:, 1].repeat(N*nO, 1)\n",
-    "  C = triangles[:, 2].repeat(N*nO, 1)\n",
+    "    A = triangles[:, 0].repeat(N * nO, 1)\n",
+    "    B = triangles[:, 1].repeat(N * nO, 1)\n",
+    "    C = triangles[:, 2].repeat(N * nO, 1)\n",
     "\n",
-    "  x = t.linalg.solve(t.stack([-D, B-A, C-A], dim=2), O-A)\n",
+    "    now = time.time()\n",
+    "    x = t.linalg.solve(t.stack([-D, B - A, C - A], dim=2), O - A)\n",
+    "    print(time.time() - now)\n",
     "\n",
-    "  s = x[:, 0]\n",
-    "  u = x[:, 1]\n",
-    "  v = x[:, 2]\n",
+    "    s = x[:, 0]\n",
+    "    u = x[:, 1]\n",
+    "    v = x[:, 2]\n",
     "\n",
-    "  intersects = (0 < u) & (0 < v) & (u + v < 1)\n",
+    "    intersects = (0 < u) & (0 < v) & (u + v < 1)\n",
     "\n",
-    "  dists = s.clone()\n",
-    "  dists[~intersects] = float('inf')\n",
-    "  dists = dists.reshape(nO, H, W, T).amin(-1)\n",
+    "    dists = s.clone()\n",
+    "    dists[~intersects] = float('inf')\n",
+    "    dists = dists.reshape(nO, H, W, T).amin(-1)\n",
     "\n",
-    "  return dists\n",
+    "    return dists.cpu()\n",
+    "\n",
     "\n",
     "nO = 45\n",
     "\n",
     "mesh_center = triangles.mean(dim=(0, 1))\n",
     "triangles -= mesh_center\n",
-    "origins = [t.tensor([-40.0*np.cos(a), 30.0, -100.0*np.sin(a)]).float() for a in np.linspace(0, 2*np.pi, nO)]\n",
+    "origins = [\n",
+    "    t.tensor([-40.0 * np.cos(a), 30.0, -100.0 * np.sin(a)]).float()\n",
+    "    for a in np.linspace(0, 2 * np.pi, nO)\n",
+    "]\n",
     "\n",
     "camera = Camera(target=mesh_center, height=60, width=40)\n",
     "dists = multirender_mesh(triangles, camera, origins)\n",
     "\n",
     "for i, dist in enumerate(dists):\n",
-    "  plt.imshow(dist, origin='lower')\n",
-    "  plt.axis('off')\n",
-    "  plt.savefig(f'/tmp/{i}.png', bbox_inches='tight')\n",
-    "  plt.close()\n",
+    "    plt.imshow(dist, origin='lower')\n",
+    "    plt.axis('off')\n",
+    "    plt.savefig(f'/tmp/{i}.png', bbox_inches='tight')\n",
+    "    plt.close()\n",
     "\n",
     "frames = []\n",
     "for i in range(len(dists)):\n",
-    "  img = Image.open(f'/tmp/{i}.png')\n",
-    "  frame = np.asarray(img)\n",
-    "  frames.append(frame[:, :, :3])\n",
+    "    img = Image.open(f'/tmp/{i}.png')\n",
+    "    frame = np.asarray(img)\n",
+    "    frames.append(frame[:, :, :3])\n",
     "frames = np.stack(frames)\n",
-    "media.show_video(frames, fps=15)"
+    "media.show_video(frames, fps=15)\n"
    ]
   },
   {
