fix some names in a few places

--- a/days/w1d1/renderer_solutions.ipynb
+++ b/days/w1d1/renderer_solutions.ipynb
@@ -79,6 +79,7 @@
     "    fig, ax = plt.subplots(subplot_kw={'projection': '3d'})\n",
     "\n",
     "    for line in lines:\n",
+    "        # dimension ordering is so ray fan displays nicely\n",
     "        ax.plot(line[:,1].numpy(), line[:,0].numpy(), line[:,2].numpy())\n",
     "\n",
     "    plt.show()"
@@ -165,7 +166,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7de128589179482b8c9c1e4209422ed8",
+       "model_id": "e2d539a937da41bc9e7e87628eb29d9a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -181,14 +182,13 @@
     "@interact\n",
     "def line(v=(-2.0, 2.0), seed=(0, 10)):\n",
     "    t.manual_seed(seed)\n",
-    "    R_1 = t.randn(2)\n",
-    "    R_2 = t.randn(2)\n",
-    "    D = R_2 - R_1\n",
-    "    P = lambda a : R_1 + a * D\n",
+    "    L_1 = t.randn(2)\n",
+    "    L_2 = t.randn(2)\n",
+    "    P = lambda v : L_1 + v * (L_2 - L_1)\n",
     "    x, y = zip(P(-2), P(2))\n",
     "    plt.plot(x, y, 'g-')\n",
-    "    plt.plot(*R_1, 'ro', markersize=12)\n",
-    "    plt.plot(*R_2, 'ro', markersize=12)\n",
+    "    plt.plot(*L_1, 'ro', markersize=12)\n",
+    "    plt.plot(*L_2, 'ro', markersize=12)\n",
     "    plt.plot(P(v)[0], P(v)[1], '*', markersize=12)"
    ]
   },
@@ -509,7 +509,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b9f489c6c6544d88b29a811f1cdda088",
+       "model_id": "c3fb5b63b7b748f791d23747ff9274b8",
        "version_major": 2,
        "version_minor": 0
       },
@@ -779,7 +779,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7f163ed892d0>"
+       "<matplotlib.image.AxesImage at 0x7f01be0e12a0>"
       ]
      },
      "execution_count": 14,
@@ -918,7 +918,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7f163ee77430>"
+       "<matplotlib.image.AxesImage at 0x7f01bc7498a0>"
       ]
      },
      "execution_count": 18,
