--- a/days/w1d1/renderer.ipynb
+++ b/days/w1d1/renderer.ipynb
@@ -79,6 +79,7 @@
     "    fig, ax = plt.subplots(subplot_kw={'projection': '3d'})\n",
     "\n",
     "    for line in lines:\n",
+    "        # dimension ordering is so ray fan displays nicely\n",
     "        ax.plot(line[:,1].numpy(), line[:,0].numpy(), line[:,2].numpy())\n",
     "\n",
     "    plt.show()"
@@ -139,7 +140,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a3325e1f01bf4c09aa56a8ede62e97ea",
+       "model_id": "fe6fd369759b4f47b2451d2ac232f029",
        "version_major": 2,
        "version_minor": 0
       },
@@ -155,14 +156,13 @@
     "@interact\n",
     "def line(v=(-2.0, 2.0), seed=(0, 10)):\n",
     "    t.manual_seed(seed)\n",
-    "    R_1 = t.randn(2)\n",
-    "    R_2 = t.randn(2)\n",
-    "    D = R_2 - R_1\n",
-    "    P = lambda a : R_1 + a * D\n",
+    "    L_1 = t.randn(2)\n",
+    "    L_2 = t.randn(2)\n",
+    "    P = lambda v : L_1 + v * (L_2 - L_1)\n",
     "    x, y = zip(P(-2), P(2))\n",
     "    plt.plot(x, y, 'g-')\n",
-    "    plt.plot(*R_1, 'ro', markersize=12)\n",
-    "    plt.plot(*R_2, 'ro', markersize=12)\n",
+    "    plt.plot(*L_1, 'ro', markersize=12)\n",
+    "    plt.plot(*L_2, 'ro', markersize=12)\n",
     "    plt.plot(P(v)[0], P(v)[1], '*', markersize=12)"
    ]
   },
@@ -410,7 +410,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d5f7eb1df1014afdb06390e730a7ecc3",
+       "model_id": "70be0312ecb04c88b29f77a15cb8a19e",
        "version_major": 2,
        "version_minor": 0
       },
