--- a/days/w1d2/w1d2_template.ipynb
+++ b/days/w1d2/w1d2_template.ipynb
@@ -84,6 +84,7 @@
         "from PIL import Image\n",
         "import requests\n",
         "from io import BytesIO\n",
+        "from IPython.display import Image, display\n",
         "\n",
         "def load_image(url):\n",
         "  response = requests.get(url)\n",
