--- a/days/w1d1/renderer.ipynb
+++ b/days/w1d1/renderer.ipynb
@@ -24,7 +24,7 @@
     "id": "YpJwBawLuh8r"
    },
    "source": [
-    "We're going to render a binary (triange | no triangle) image for one triangle, render all the triangles at once in a batch, and then combine them, and then more than just binary (triangle | no triangle).\n",
+    "We'll actually start with doing a bit of rendering from 2d to 1d to simplify (instead of 3d to 2d). After that, we're going to render a binary 'is there a triangle at this pixel?' for one triangle, render all the triangles at once in a batch, and then combine them, and then more than just binary 'is there a triangle?'.\n",
     "\n",
     "\n",
     "Here's our model of the world: the \"camera\" is a point with a grid of lines pointing out of it - each of these corresponds to one pixel in the camera's image. Out there are a bunch of triangles, each specified by three points. In order to find the color of each pixel, we'll check whether the line coming from the camera intersects with the area of any of the the triangles. Then we can color the pixel based on some information about that triangle that the line hit."
@@ -58,7 +58,7 @@
     "->\n",
     "FloatTensor[width_pixels (number of rays), 2 (origin and direction), 3 (scalars per point)]\n",
     "```\n",
-    "that creates rays going from the camera (origin) in each pixel direction. fov_ratio means \"how wide of a thing that's 1 unit away can I see?\". At fov_ratio=1, you can see 1-unit-wide things that are 1 unit away, and so on.\n",
+    "that creates rays going from the camera (origin) in each pixel direction. fov_ratio means \"how far to the left/right can I see 1 unit away from the camera?\". At fov_ratio=1, you can see 1-unit to the left at 1 unit away, and so on.\n",
     "\n",
     "Once you think you've made it correctly, run the `render_lines_with_pyplot` function we provide on your rays tensor with 10 rays and an fov_ratio of 10. Note that you should convert from origin and direction to lines segments with start points and endpoints for `render_lines_with_pyplot`. It won't make any difference here because the origin is at (0, 0, 0), but it's good to be in habit of using the correct units/types. It should look like this: ![image.png](attachment:image.png)."
    ]
@@ -883,7 +883,7 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -897,7 +897,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.10.1"
   },
   "widgets": {
    "application/vnd.jupyter.widget-state+json": {
