--- a/days/w1d2/w1d2_template.ipynb
+++ b/days/w1d2/w1d2_template.ipynb
@@ -13,6 +13,17 @@
     },
     {
       "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Readings\n",
+        "\n",
+        "Introduction to Convolutions: https://www.youtube.com/watch?v=8rrHTtUzyZA\n",
+        "\n",
+        "Residual Networks: https://towardsdatascience.com/an-overview-of-resnet-and-its-variants-5281e2f56035"
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "T9dnx5OllrzZ"
       },
