w1d2: Fix typos and improve instructions

--- a/days/w1d2/w1d2_template.ipynb
+++ b/days/w1d2/w1d2_template.ipynb
@@ -686,7 +686,7 @@
         "id": "wHE6jZzX_3Jv"
       },
       "source": [
-        "Implement 1d convolutions using `torch.as_strided` as `torch.einsum`."
+        "Implement 1d convolutions using `torch.as_strided` and `torch.einsum`."
       ]
     },
     {
@@ -769,7 +769,7 @@
       },
       "outputs": [],
       "source": [
-        "# x : (batchsize, in_channels, height, width), weights : (out_channels, in_channels, kernel_height, kernel_width), bias : (out_channels)\n",
+        "# x : (batchsize, in_channels, height, width), weights : (out_channels, in_channels, kernel_height, kernel_width)\n",
         "\n",
         "def conv2d_minimal(x, weights):\n",
         "  pass"
@@ -1095,9 +1095,9 @@
         "id": "poNubMhVIFRr"
       },
       "source": [
-        "Implement now Conv2d and MaxPool2d classes, each inheriting `nn.Module`. When you inherit `nn.Module`, your class should define `__init__()` and `forward()` methods. These will be called with your module is initialized and called like a function, respectively. Go look at our doc on `nn.Module` subclasses for more info: https://docs.google.com/document/d/1PYW_lW_-jXpN394S8LtPqivSB91HjAwQi6_iDtmpwXg/edit?usp=sharing\n",
+        "Implement now Conv2d and MaxPool2d classes, each inheriting `nn.Module`. When you inherit `nn.Module`, your class should define `__init__()` and `forward()` methods. These will be called when your module is initialized and called like a function, respectively. Go look at our doc on `nn.Module` subclasses for more info: https://docs.google.com/document/d/1PYW_lW_-jXpN394S8LtPqivSB91HjAwQi6_iDtmpwXg/edit?usp=sharing\n",
         "\n",
-        "Crucially, your conv kernel should be wrapped in a `torch.nn.Parameter()`, as its values will be learnable parameters of your model, which will be tuned during training If you wrap a tensor in `torch.nn.Parameter()` inside of a `nn.Module`, it will get automatically stored in the iterator returned by `model.parameters()`, collecting them all in one place for easy access.\n",
+        "Crucially, your conv kernel should be wrapped in a `torch.nn.Parameter()`. When a `torch.nn.Parameter()` is assigned as an attribute of a `nn.Module`, it will get automatically registered as a learnable parameter, meaning that `model.parameters()` will include it. Additionally, by default `Parameters` keep track of their gradients, while `Tensors` by default do not.\n",
         "\n",
         "For initializing the values of the Conv2d parameters, read [this](https://towardsdatascience.com/weight-initialization-in-neural-networks-a-journey-from-the-basics-to-kaiming-954fb9b47c79)\n",
         "\n",
